@@ -1,0 +1,11 @@
+%% DO NOT EDIT!
+%% This file is generated automatically from models.R
+\begin{description}
+	\item[doc] The Binomial likelihood (expert version)
+	\item[hyper]\ 
+	\item[survival] FALSE
+	\item[discrete] TRUE
+	\item[link] default logit cauchit probit cloglog loglog log sslogit logitoffset quantile pquantile robit sn
+	\item[pdf] binomial
+	\item[status] experimental
+\end{description}
