@@ -41,8 +41,8 @@ export(inla.cut)
 export(inla.debug.graph)
 export(inla.dev.new)
 export(inla.doc)
-export(inla.fgn)
 export(f)
+export(inla.fgn)
 export(inla.geobugs2inla)
 export(inla.graph2matrix)
 export(inla.spy)
@@ -104,9 +104,6 @@ export(as.inla.mdata)
 S3method(print, inla.mdata)
 S3method(merge, inla)
 export(inla.merge)
-export(inla.mesh.assessment)
-export(meshbuilder)
-export(inla.mesh.components)
 export(inla.contour.segment)
 export(inla.delaunay)
 export(inla.fmesher.smorg)
@@ -166,6 +163,9 @@ S3method(inla.diameter, inla.mesh.1d)
 S3method(inla.diameter, inla.mesh)
 S3method(inla.diameter, inla.mesh.segment)
 S3method(inla.diameter, inla.mesh.lattice)
+export(inla.mesh.components)
+export(inla.mesh.assessment)
+export(meshbuilder)
 export(inla.models)
 export(inla.nmix.lambda.fitted)
 export(inla.setOption)
@@ -197,14 +197,14 @@ export(inla.pc.cormat.theta2r)
 export(inla.pc.cormat.permute)
 export(inla.pc.cormat.rtheta)
 export(inla.pc.cormat.dtheta)
-export(inla.pc.rgammacount)
-export(inla.pc.dgammacount)
-export(inla.pc.qgammacount)
-export(inla.pc.pgammacount)
 export(inla.pc.rgamma)
 export(inla.pc.dgamma)
 export(inla.pc.qgamma)
 export(inla.pc.pgamma)
+export(inla.pc.rgammacount)
+export(inla.pc.dgammacount)
+export(inla.pc.qgammacount)
+export(inla.pc.pgammacount)
 export(inla.pc.rgevtail)
 export(inla.pc.dgevtail)
 export(inla.pc.qgevtail)
@@ -228,7 +228,6 @@ export(inla.posterior.sample)
 export(inla.posterior.sample.eval)
 S3method(print, inla)
 export(inla.priors.used)
-export(inla.qinv)
 export(inla.qstat)
 export(inla.qdel)
 export(inla.qget)
@@ -236,6 +235,7 @@ export(inla.qnuke)
 export(inla.qlog)
 S3method(print, inla.q)
 S3method(summary, inla.q)
+export(inla.qinv)
 export(inla.qreordering)
 export(inla.qsample)
 export(inla.qsolve)
@@ -288,6 +288,23 @@ export(control.hazard)
 export(control.gev2)
 export(inla.as.sparse)
 export(inla.as.dgTMatrix)
+export(inla.dBind)
+export(inla.extract.el)
+S3method(inla.extract.el, data.frame)
+S3method(inla.extract.el, list)
+S3method(inla.extract.el, matrix)
+export(inla.matern.cov)
+export(inla.matern.cov.s2)
+export(inla.row.kron)
+export(inla.spde.make.A)
+export(inla.spde.make.block.A)
+export(inla.spde.make.index)
+export(inla.spde.models)
+export(inla.spde.precision)
+export(inla.spde.result)
+export(inla.spde.sample)
+S3method(inla.spde.sample, default)
+S3method(inla.spde.sample, inla.spde)
 export(inla.spde.precision.inla.spde1)
 export(inla.spde.result.inla.spde1)
 S3method(inla.spde.precision, inla.spde1)
@@ -313,23 +330,6 @@ export(inla.spde2.result)
 export(inla.spde2.theta2phi0)
 export(inla.spde2.theta2phi1)
 export(inla.spde2.theta2phi2)
-export(inla.dBind)
-export(inla.extract.el)
-S3method(inla.extract.el, data.frame)
-S3method(inla.extract.el, list)
-S3method(inla.extract.el, matrix)
-export(inla.matern.cov)
-export(inla.matern.cov.s2)
-export(inla.row.kron)
-export(inla.spde.make.A)
-export(inla.spde.make.block.A)
-export(inla.spde.make.index)
-export(inla.spde.models)
-export(inla.spde.precision)
-export(inla.spde.result)
-export(inla.spde.sample)
-S3method(inla.spde.sample, default)
-S3method(inla.spde.sample, inla.spde)
 export(inla.sp2segment)
 export(as.inla.mesh.segment)
 S3method(as.inla.mesh.segment, Polygon)
